# MoodPlayer

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  README.md
.github/workflows/: build.yml
resources/: MoodPlayer.desktop
src/audio/: MusicEngine.cpp  MusicEngine.h
src/core/: MoodEngine.cpp  MoodEngine.h  SettingsManager.cpp  SettingsManager.h  SystemMonitor.cpp  SystemMonitor.h
src/integrations/: SpotifyConnector.cpp  SpotifyConnector.h  SpotifyOAuth.cpp  SpotifyOAuth.h
src/ui/: PlayerController.cpp  PlayerController.h  SettingsDialog.cpp  SettingsDialog.h
